--- a/html/실습1.레드향.html
+++ b/html/실습1.레드향.html
@@ -7,12 +7,17 @@
     <title>레드향 상품소개</title>
 </head>
 <body>
+    <a href="order.html" target='_blank'>
+        <img src="images/tangerines.jpg" alt="귤이야">
+    </a>
     <h1>레드향</h1>
     <p>껍질에 붉은 빛이 돌아 <strong>레드향</strong>이라 불린다. </p>
     <p>레드향은 <i>한라봉과 귤을 교배</i>한 것으로 
     <br>일반 귤보다 2~3 배 크고, 과육이 붉고 통통하다.</p>
     <p>비타민 C 와 비타민 P 가 풍부해 
     <br><strong>혈액순환, 감기예방</strong> 등에 좋은 것으로 알려져 있다.</p>
+    <hr>
+    <a href="order.html">주문서 작성하기</a>
     <hr>
     <h2>레드향 샐러드 레시피 </h2>
     <p><strong>재료 :</strong> 레드향 1 개, 아보카도 1 개, 토마토 1 개, 샐러드 채소 30g</p>
