--- a/html/07.폼 관련 태그.html
+++ b/html/07.폼 관련 태그.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>폼 관련 태그</title>
 </head>
+
 <body>
     <!--  
         <form> 태그
@@ -24,7 +26,7 @@
     <h1>폼 관련 태그</h1>
     <h2>폼 태그의 기본구조</h2>
     <form action="order.html" method='get'>
-    <!-- 
+        <!-- 
         name : from 태그 안에서 input 태그를 구분하는 역할
                 나중에 서버로 값을 전달 할때 name 속성과 텍스트 필드에
                 작성된 값이 시트로 넘어간다
@@ -33,20 +35,20 @@
         & 요소가 여러개인 경우 &로 연결
         email=email
         -->
-      검색할 내용 : 
-      <input type="text" name='search' size='15' value='검색어'>
-      <br>
-      이메일 : 
-      <input type="text" name='email' size='15' value='email'>
+        검색할 내용 :
+        <input type="text" name='search' size='15' value='검색어'>
+        <br>
+        이메일 :
+        <input type="text" name='email' size='15' value='email'>
 
-      <!-- 
+        <!-- 
         submit버튼 : 서버에 특정 페이지를 요청
 
         클릭하면 form요소의 method요청 전송 방식으로 action에 지정한 서버로
         사용자가 입력한 값(key=value)를 전달
        -->
-       
-      <input type="submit" value='검색'>
+
+        <input type="submit" value='검색'>
     </form>
     <hr>
     <form action="">
@@ -58,8 +60,8 @@
             <legend>회원정보</legend>
             <label>아이디 &nbsp;&nbsp;&nbsp;: <input type='text'></label>
             <br>
-            <label>비밀번호 :    <input type="password"></label>
-        </fieldset> 
+            <label>비밀번호 : <input type="password"></label>
+        </fieldset>
         <fieldset>
             <legend>배송정보</legend>
             <label>수령인 : <input type="cs"></label>
@@ -67,7 +69,7 @@
             <label>주 소 &nbsp;&nbsp;: <input type="ad"></label>
         </fieldset>
         <br>
-      <input type="submit" value='회원가입'>
+        <input type="submit" value='회원가입'>
 
     </form>
     <hr>
@@ -75,8 +77,111 @@
     <form>
         <!-- type='text'
             한줄짜리 텍스트를 입력 할 수 있는 텍스트 박스 -->
-        아이디 : <input type="text" name="userId" size='20' maxlength='15' placeholder='아이디를 입력하라우' required>
-        
+        <ul>
+            <li>
+                아이디 : <input type="text" name="userId" size='20' maxlength='15' placeholder='아이디를 입력하라우' required value='아이디'>
+            </li>
+            <li>
+                비밀번호 : <input type="password" name="userPw" size='20' placeholder='비밀번호를 입력해라' required, maxlength='15' value='비밀번호'>
+            </li>
+            <li>
+                이메일 : <input type="email" name="userEmail" id='userEmail' placeholder='이메이을 입력해주세요'>
+            </li>
+            <li>
+                홈페이지 : <input type="url" name="homepage" id="homepage" value='https://'>
+            </li>
+            <li>
+                검색 : <input type="search" name="searchText" id="searchText" placeholder='검색할 내용 입력'>
+            </li>
+            <!-- datalist 태그
+                    텍스트 필드에서 데이터 목록 중 값을 선택하여 입력 -->
+            <li>
+                색상 : <input type="text" name='color' list='myColor'>
+                <datalist id='myColor'>
+                    <option value="black">검정색</option>
+                    <option value="white">흰색</option>
+                    <option value="skyblue">하늘색</option>
+                </datalist>
+            </li>
+        </ul>
+        <input type="submit" value="전송">
+        <!-- 폼 안의 입력 요소들을 모두 초기화 -->
+        <input type="reset" value="초기화">
+    </form>
+    <h3>숫자와 관련된 input 태그들</h3>
+    <form action="">
+    <!-- type='number'
+        입력창에 숫자를 입력하는 것이 기본이지만, 브라우저에 따라서 스핀 박스가 표시되기도 한다 -->
+
+        <input type="number" name="amount" id="amount" value='0' min='0' max='100' step='5' >
+        <br>
+        <!-- type='range' : 슬라이드바를 통한 숫자 지정 기능 -->
+        <input type="range" name="point" id="point" min='0' max='1000' step='100' value='300'>
+        <br>
+        <input type="submit" value="전송">
+        <!-- 폼 안의 입력 요소들을 모두 초기화 -->
+        <input type="reset" value="초기화">
+    </form>
+    <h3>날짜/시간 관련 input 태그들</h3>
+    <form action="">
+        <input type="date" name="date" id="date" value='2023-05-09'>
+        <input type="date" name="date" id="date">
+    </form>
+    <h3>라디오 버튼과 체크박스</h3>
+    <form action="">
+        <fieldset>
+            <legend>성별</legend>
+            <input type="radio" name="gender" value='M'>남자
+            <input type="radio" name="gender" value='F'>여자
+        </fieldset>
+        <fieldset>
+            <legend>취미</legend>
+            <input type="checkbox" name="hobby" value='baseball'>야구
+            <input type="checkbox" name="hobby" value='football'>축구
+            <input type="checkbox" name="hobby" value='basketball'>농구
+        </fieldset>
+        <input type="submit" value="전송"><input type="reset" value="초기화">              
+    </form>
+    <h3>기타 input 태그들</h3>
+    <form action="">
+        <input type="color" name="color" id="color">
+        <br>
+        <input type="file" name="uploadFile" id="uploadFile">
+        <br>
+        <input type="hidden" name="hiddenValue" value='1'>
+        <br>
+        <input type="button" value="button">
+        <br>
+        <button type='submit'><b>전송</b></button>
+        <button type='reset'>초기화</button>
+        <button type='button'>버튼</button>
+
+        <input type="image" value="img버튼" src='images/login.png' alt='로그인버튼'>
+    </form>
+    <h3>드롭다운목록 select</h3>
+    <form action="">
+        <!-- 
+            select 태그와 option 태그
+            사용자가 내용을 입력하는 것이 아닌 여러 옵션 중에서 선택하게 하고 싶을 때 사용하는 드롭 운 목록이다
+         -->
+        국적
+        <select>
+            <optgroup label='아시아'>
+            <option value="ko" selected>한국</option>
+            <option value="ch">중국</option>
+            <option value="jp">일본</option>
+        </optgroup>
+        <optgroup label='아메이카'>
+        <option value="us" >미국</option>
+        <option value="cd" >캐나다</option>
+    </optgroup>
+    <option value="" label='기타'></option>
+        </select>
+        <br>         
+        progress : <progress value='30' max='100'></progress>
+        <br>
+        <meter min='0' max='100' value='95' low='60' high='90'></meter>
     </form>
 </body>
+
 </html>
