--- a/html/실습_입력양식작성/실습문제9.html
+++ b/html/실습_입력양식작성/실습문제9.html
@@ -37,13 +37,13 @@
         <fieldset>
             <legend>추가 정보</legend>
             <p>프로필 사진 : <input type="file" name="" id=""></p>
-            <p>성별 : <input type="radio" name="gander" id="M">남자<input type="radio" name="gander" id="F">여자</p>
+            <p>성별 : <input type="radio" name="gander" id="M" checked>남자<input type="radio" name="gander" id="F">여자</p>
             <p>생년월일 : <input type="date" name="" id=""></p>
             <label for="취미">취미 : </label>
             <br>
             <input type="checkbox" name="h" id="야구">야구 <input type="checkbox" name="h" id="농구">농구 <input type="checkbox" name="h" id="축구">축구
             <br>
-            <input type="checkbox" name="h" id="공부">공부 <input type="checkbox" name="h" id="음악감상">음악감상
+            <input type="checkbox" name="h" id="공부" checked>공부 <input type="checkbox" name="h" id="음악감상">음악감상
             <br>
             <input type="checkbox" name="h" id="기타">기타 : <input type="text" name="h" id="기타">
             <br>
