--- a/html/실습_입력양식작성/실습문제9.html
+++ b/html/실습_입력양식작성/실습문제9.html
@@ -50,7 +50,7 @@
             <br>
             <label for="자기소개">자기소개</label>
             <br>
-            <textarea name="자기소개" id="자기소개" cols="60" rows="4"></textarea>
+            <textarea name="자기소개" id="자기소개" cols="60" rows="4" style='resize: none;'></textarea>
         </fieldset>
         <p><input type="submit" value="회원가입"> <input type="reset" value="다시입력"> <button>이전으로</button></p>
     </form>
